--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Las Meninas AR Trick Art</title>
-    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
-    <style>
-      body { margin: 0; overflow: hidden; }
-    </style>
-  </head>
-  <body>
-    <a-scene embedded arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: false;" vr-mode-ui="enabled: false">
-      
-      <a-assets>
-        <img id="meninas" src="lasmeninas_transparent.png"> 
-      </a-assets>
+  <head>
+    <meta charset="utf-8">
+    <title>Las Meninas AR (HIRO Marker)</title>
+    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
+    <style>
+      body { margin: 0; overflow: hidden; }
+    </style>
+  </head>
+  <body>
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" vr-mode-ui="enabled: false">
+      
+            <a-assets>
+        <img id="meninas" src="lasmeninas_transparent.png">
+                <img id="marker-image" src="lasmeninas_marker.jpg"> 
+      </a-assets>
 
-      <a-marker type='pattern' url='lasmeninas.patt'>
-        <a-entity 
-          geometry="primitive: plane; height: 2.0; width: 1.7"
-          material="src: #meninas; transparent: true; alphaTest: 0.5"
-          rotation="-90 0 0"
-          position="0 0.001 0">
-        </a-entity>
-      </a-marker>
+            <a-marker preset="hiro">
+                <a-entity
+          geometry="primitive: plane; height: 2.0; width: 1.7"
+          material="src: #marker-image"
+          rotation="-90 0 0"
+          position="0 0 0">
+        </a-entity>
 
-      <a-entity camera></a-entity>
-    </a-scene>
-  </body>
+                <a-entity 
+          geometry="primitive: plane; height: 2.0; width: 1.7"
+          material="src: #meninas; transparent: true; alphaTest: 0.5"
+          rotation="-90 0 0"
+          position="0 0.001 0">         </a-entity>
+      </a-marker>
+
+      <a-entity camera></a-entity>
+    </a-scene>
+  </body>
 </html>
