--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
       <a-entity>
         
         <a-entity
-          geometry="primitive: plane; height: 3.5; width: 3.0"  /* サイズを大きく */
+          geometry="primitive: plane; height: 3.5; width: 3.0"  
           material="src: #marker-image"
           rotation="0 0 0"
-          position="0 1.5 -2.0"> /* Zを-2.0mに近づける */
+          position="0 1.5 -2.0"> 
         </a-entity>
 
-        <a-entity 
-          geometry="primitive: plane; height: 3.5; width: 3.0"  /* サイズを大きく */
-          material="src: #meninas; transparent: true; alphaTest: 0.1;" /* alphaTestも追加 */
+        <a-entity
+          geometry="primitive: plane; height: 3.5; width: 3.0"
+          material="src: #meninas; transparent: true; alphaTest: 0.1;" 
           rotation="0 0 0"
-          position="0 1.5 -1.99"> /* Zを-1.99mに近づける */
+          position="0 1.5 -1.99">
         </a-entity>
         
       </a-entity>
