--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR (自然表示版)</title>
+    <title>Las Meninas AR (高さ調整版)</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
-      /* 画面いっぱいに広げる設定は削除 */
     </style>
   </head>
   <body>
@@ -19,13 +18,13 @@
         <img id="meninas" src="lasmeninas_transparent.png">
       </a-assets>
 
-      <!-- 自然なサイズで中央表示 -->
-     <a-entity
-  geometry="primitive: plane; height: 1.2; width: 0.8"
-  material="src: #meninas; transparent: true; alphaTest: 0.05"
-  position="0 0.6 -2"
-  rotation="0 0 0">
-</a-entity>
+      <!-- 高さを y = 0.6 に設定 -->
+      <a-entity
+        geometry="primitive: plane; height: 1.2; width: 0.8"
+        material="src: #meninas; transparent: true; alphaTest: 0.05"
+        position="0 0.6 -2"
+        rotation="0 0 0">
+      </a-entity>
 
       <a-entity camera></a-entity>
     </a-scene>
