--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR (高さ調整版)</title>
+    <title>Las Meninas AR (高さ0.2版)</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
@@ -18,7 +18,7 @@
         <img id="meninas" src="lasmeninas_transparent.png">
       </a-assets>
 
-      <!-- 高さを y = 0.6 に設定 -->
+      <!-- 高さを y = 0.2 に設定 -->
       <a-entity
         geometry="primitive: plane; height: 1.2; width: 0.8"
         material="src: #meninas; transparent: true; alphaTest: 0.05"
