--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR (高さ0.2版)</title>
+    <title>Las Meninas AR（下端合わせ版）</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
@@ -18,11 +18,11 @@
         <img id="meninas" src="lasmeninas_transparent.png">
       </a-assets>
 
-      <!-- 高さを y = 0.2 に設定 -->
+      <!-- 下端を y = 0 に合わせる（高さ1.6 → 中心は y = 0.8） -->
       <a-entity
-        geometry="primitive: plane; height: 1.2; width: 0.8"
+        geometry="primitive: plane; height: 1.6; width: 1.066"  <!-- 9:16比率 -->
         material="src: #meninas; transparent: true; alphaTest: 0.05"
-        position="0 0.2 -2"
+        position="0 0.8 -2"
         rotation="0 0 0">
       </a-entity>
 
@@ -30,6 +30,7 @@
     </a-scene>
   </body>
 </html>
+
 
 
 
