--- a/index.html
+++ b/index.html
@@ -2,25 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR（下端合わせ版）</title>
+    <title>画像表示テスト</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
     </style>
   </head>
   <body>
-    <a-scene embedded 
-      arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: false;" 
-      vr-mode-ui="enabled: false">
-
+    <a-scene embedded>
       <a-assets>
         <img id="meninas" src="lasmeninas_transparent.png">
       </a-assets>
 
-      <!-- 下端を y = 0 に合わせる（高さ1.6 → 中心は y = 0.8） -->
       <a-entity
-        geometry="primitive: plane; height: 1.6; width: 1.066"  <!-- 9:16比率 -->
+        geometry="primitive: plane; height: 1.6; width: 1.066"
         material="src: #meninas; transparent: true; alphaTest: 0.05"
         position="0 0.8 -2"
         rotation="0 0 0">
