--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>画像表示テスト</title>
+    <title>Las Meninas AR（視野補正版）</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
     </style>
   </head>
   <body>
-    <a-scene embedded>
+    <a-scene embedded 
+      arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: false;" 
+      vr-mode-ui="enabled: false">
+
       <a-assets>
         <img id="meninas" src="lasmeninas_transparent.png">
       </a-assets>
 
+      <!-- 高さ0.8、距離を浅くして視野に収める -->
       <a-entity
         geometry="primitive: plane; height: 1.6; width: 1.066"
         material="src: #meninas; transparent: true; alphaTest: 0.05"
-        position="0 0.8 -2"
+        position="0 0.8 -1.2"
         rotation="0 0 0">
       </a-entity>
 
@@ -25,6 +30,7 @@
     </a-scene>
   </body>
 </html>
+
 
 
 
