--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR（位置0.4m下げ版）</title>
+    <title>Las Meninas AR (下端合わせ版)</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
@@ -18,11 +18,11 @@
         <img id="meninas" src="lasmeninas_transparent.png">
       </a-assets>
 
-      <!-- 画像サイズはそのまま、高さだけ0.4m下げる -->
+      <!-- 高さそのまま、下端を y=0 に合わせる -->
       <a-entity
-        geometry="primitive: plane; height: 1.6; width: 1.066"
+        geometry="primitive: plane; height: 1.2; width: 0.8"
         material="src: #meninas; transparent: true; alphaTest: 0.05"
-        position="0 0.4 -0.8"
+        position="0 0.6 -2"
         rotation="0 0 0">
       </a-entity>
 
