--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
         <img id="meninas" src="lasmeninas_transparent.png">
       </a-assets>
 
-      <!-- 高さを y = 0.6 に設定 -->
       <a-entity
         geometry="primitive: plane; height: 1.2; width: 0.8"
         material="src: #meninas; transparent: true; alphaTest: 0.05"
-        position="0 0.6 -2"
-        rotation="0 0 0">
+        position="0 0.3 -2"   rotation="0 0 0">
       </a-entity>
 
       <a-entity camera></a-entity>
