--- a/index.html
+++ b/index.html
@@ -2,26 +2,31 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR (最終最終高さ調整版)</title>
+    <title>Las Meninas AR (フルサイズ最適化)</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
+      /* CSSでカメラ映像を画面いっぱいに広げる設定を強制 */
+      .a-canvas { width: 100vw !important; height: 100vh !important; }
     </style>
   </head>
   <body>
     <a-scene embedded 
-      arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: false;" 
+      arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: false; cameraParametersUrl: camera_para.dat;" 
       vr-mode-ui="enabled: false">
-
+      
       <a-assets>
-        <img id="meninas" src="lasmeninas_transparent.png">
+        <img id="meninas" src="lasmeninas_transparent.png"> 
       </a-assets>
 
-      <a-entity
-        geometry="primitive: plane; height: 1.2; width: 0.8"
-        material="src: #meninas; transparent: true; alphaTest: 0.05"
-        position="0 -0.2 -2"   rotation="0 0 0">
+      <a-entity>
+        
+        <a-entity
+          geometry="primitive: plane; height: 4.0; width: 3.5"  material="src: #meninas; transparent: true; alphaTest: 0.05;" 
+          rotation="0 0 0"
+          position="0 -0.4 -1.5"> </a-entity>
+
       </a-entity>
 
       <a-entity camera></a-entity>
