--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR (フルサイズ最適化)</title>
+    <title>Las Meninas AR (最終比率最適化)</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
-      /* CSSでカメラ映像を画面いっぱいに広げる設定を強制 */
+      /* カメラ映像を画面いっぱいに広げる設定を強制 */
       .a-canvas { width: 100vw !important; height: 100vh !important; }
     </style>
   </head>
@@ -23,7 +23,7 @@
       <a-entity>
         
         <a-entity
-          geometry="primitive: plane; height: 4.0; width: 3.5"  material="src: #meninas; transparent: true; alphaTest: 0.05;" 
+          geometry="primitive: plane; height: 1.78; width: 1.0"  material="src: #meninas; transparent: true; alphaTest: 0.05;" 
           rotation="0 0 0"
           position="0 -0.4 -1.5"> </a-entity>
 
