--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR (最終比率最適化)</title>
+    <title>Las Meninas AR (最終起動修正版)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1">
+    
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
@@ -21,15 +23,15 @@
       </a-assets>
 
       <a-entity>
-        
         <a-entity
-          geometry="primitive: plane; height: 1.78; width: 1.0"  material="src: #meninas; transparent: true; alphaTest: 0.05;" 
+          geometry="primitive: plane; height: 1.78; width: 1.0"
+          material="src: #meninas; transparent: true; alphaTest: 0.05;" 
           rotation="0 0 0"
-          position="0 -0.4 -1.5"> </a-entity>
-
+          position="0 -0.4 -1.5">
+        </a-entity>
       </a-entity>
 
-      <a-entity camera></a-entity>
+      <a-entity camera look-controls wasd-controls></a-entity>
     </a-scene>
   </body>
 </html>
