--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR (最終最適化)</title>
+    <title>Las Meninas AR (最終安定版)</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
-      /* 画面を覆うための最小限のCSSを維持 */
       .a-canvas { width: 100vw !important; height: 100vh !important; }
     </style>
-    <!-- カメラ初期化安定化のためにviewportを追加 -->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1">
   </head>
   <body>
-    <!-- ARJSの初期化は基本構造を維持 -->
     <a-scene embedded 
       arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: false;" 
       vr-mode-ui="enabled: false">
@@ -23,14 +20,10 @@
         <img id="meninas" src="lasmeninas_transparent.png">
       </a-assets>
 
-      <!-- 1. 比率変更 (2515x3000 -> 1.192:1.0) 2. カメラ固定を追加 -->
       <a-entity
-        geometry="primitive: plane; height: 1.192; width: 1.0"  <!-- ★ 比率を 1.192:1.0 に変更 ★ -->
+        geometry="primitive: plane; height: 1.192; width: 1.0"
         material="src: #meninas; transparent: true; alphaTest: 0.05"
-        position="0 -0.4 -2"   <!-- ★ 高さの最適値 -0.4 を適用し、Z軸は元の -2.0 に戻す ★ -->
-        rotation="0 0 0"
-        look-at="[camera]"> <!-- ★ カメラ固定機能を追加 ★ -->
-      </a-entity>
+        position="0.5 -0.4 -2"   rotation="0 0 0">        </a-entity>
 
       <a-entity camera></a-entity>
     </a-scene>
