--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR (最終安定版)</title>
+    <title>Las Meninas AR (最終拡大調整版)</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
@@ -21,14 +21,14 @@
       </a-assets>
 
       <a-entity
-        geometry="primitive: plane; height: 1.192; width: 1.0"
-        material="src: #meninas; transparent: true; alphaTest: 0.05"
-        position="0.5 -0.4 -2"   rotation="0 0 0">        </a-entity>
+        geometry="primitive: plane; height: 4.0; width: 3.35"  material="src: #meninas; transparent: true; alphaTest: 0.05"
+        position="0 -0.4 -5.0"   rotation="0 0 0">        </a-entity>
 
       <a-entity camera></a-entity>
     </a-scene>
   </body>
 </html>
+
 
 
 
