--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR (最終確定版)</title>
+    <title>Las Meninas AR (最終比率調整版)</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
-      /* 画面いっぱいのサイズを強制 */
-      .a-canvas { width: 100vw !important; height: 100vh !important; }
     </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1">
   </head>
   <body>
     <a-scene embedded 
@@ -21,15 +18,13 @@
         <img id="meninas" src="lasmeninas_transparent.png">
       </a-assets>
 
-      <a-entity camera>
-        <a-entity
-          geometry="primitive: plane; height: 4.0; width: 3.35"  /* ★ 3000:2515の比率 (1.192:1) を適用した最大サイズ ★ */
-          material="src: #meninas; transparent: true; alphaTest: 0.05"
-          position="0 -0.5 -3.5"   /* X=0 (中心)、Y=-0.5 (床合わせ)、Z=-3.5 (距離) */
-          rotation="0 0 0">
-        </a-entity>
+      <a-entity
+        geometry="primitive: plane; height: 1.192; width: 1.0"  material="src: #meninas; transparent: true; alphaTest: 0.05"
+        position="0 0.3 -2"    
+        rotation="0 0 0">
       </a-entity>
 
+      <a-entity camera></a-entity>
     </a-scene>
   </body>
 </html>
