--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR (最終比率調整版)</title>
+    <title>Las Meninas AR (最終比率確認)</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
+      /* 画面の収縮を防ぐため、CSSの基本設定を維持 */
+      .a-canvas { width: 100vw !important; height: 100vh !important; }
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1">
   </head>
   <body>
     <a-scene embedded 
@@ -19,9 +22,8 @@
       </a-assets>
 
       <a-entity
-        geometry="primitive: plane; height: 1.192; width: 1.0"  material="src: #meninas; transparent: true; alphaTest: 0.05"
-        position="0 -0.1 -2"    
-        rotation="0 0 0">
+        geometry="primitive: plane; height: 3.0; width: 2.517"  material="src: #meninas; transparent: true; alphaTest: 0.05"
+        position="0 1.5 -3.5"    rotation="0 0 0">
       </a-entity>
 
       <a-entity camera></a-entity>
