--- a/index.html
+++ b/index.html
@@ -2,34 +2,37 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR (最終比率確認)</title>
+    <title>Las Meninas AR (歪み強制停止版)</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
-      /* 画面の収縮を防ぐため、CSSの基本設定を維持 */
       .a-canvas { width: 100vw !important; height: 100vh !important; }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1">
   </head>
   <body>
     <a-scene embedded 
-      arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: false;" 
+      arjs="sourceType: webcam; debugUIEnabled: false;"  /* ★ trackingMethod: bestを削除 ★ */
       vr-mode-ui="enabled: false">
 
       <a-assets>
         <img id="meninas" src="lasmeninas_transparent.png">
       </a-assets>
 
-      <a-entity
-        geometry="primitive: plane; height: 3.0; width: 2.517"  material="src: #meninas; transparent: true; alphaTest: 0.05"
-        position="0 1.5 -3.5"    rotation="0 0 0">
+      <a-entity camera>
+        <a-entity
+          geometry="primitive: plane; height: 3.0; width: 2.517"
+          material="src: #meninas; transparent: true; alphaTest: 0.05"
+          position="0 1.5 -3.5"    /* Y=1.5 (下端合わせ)、Z=-3.5 (距離) */
+          rotation="0 0 0">
+        </a-entity>
       </a-entity>
 
-      <a-entity camera></a-entity>
     </a-scene>
   </body>
 </html>
+
 
 
 
