--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR (最終確定版)</title>
+    <title>Las Meninas AR (最終確定・安定版)</title>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1">
+    
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
+      /* ★ 追加: ARのクリッピングを防ぐためのCSS ★ */
       .a-canvas { width: 100vw !important; height: 100vh !important; }
     </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1">
   </head>
   <body>
     <a-scene embedded 
-      arjs="sourceType: webcam; debugUIEnabled: false;" 
+      arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: false;" 
       vr-mode-ui="enabled: false">
 
       <a-assets>
@@ -21,16 +24,15 @@
       </a-assets>
 
       <a-entity
-        geometry="primitive: plane; height: 3.0; width: 2.517"  
-        material="src: #meninas; transparent: true; alphaTest: 0.05"
-        position="0 1.5 -3.5"    
-        rotation="0 0 0">
+        geometry="primitive: plane; height: 1.192; width: 1.0"  material="src: #meninas; transparent: true; alphaTest: 0.05"
+        position="0 0.3 -2"    rotation="0 0 0">
       </a-entity>
 
       <a-entity camera></a-entity>
     </a-scene>
   </body>
 </html>
+
 
 
 
