--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR (最終確定・安定版)</title>
+    <title>Las Meninas AR (最終最適サイズ版)</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1">
     
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
-      /* ★ 追加: ARのクリッピングを防ぐためのCSS ★ */
+      /* ARのクリッピングを防ぐためのCSS */
       .a-canvas { width: 100vw !important; height: 100vh !important; }
     </style>
   </head>
@@ -24,8 +24,8 @@
       </a-assets>
 
       <a-entity
-        geometry="primitive: plane; height: 1.192; width: 1.0"  material="src: #meninas; transparent: true; alphaTest: 0.05"
-        position="0 0.3 -2"    rotation="0 0 0">
+        geometry="primitive: plane; height: 1.778; width: 1.0"  material="src: #meninas; transparent: true; alphaTest: 0.05"
+        position="0 0.889 -2"    rotation="0 0 0">
       </a-entity>
 
       <a-entity camera></a-entity>
