--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR（スマホ比率版）</title>
+    <title>Las Meninas AR (最終確定・安定版)</title>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1">
+    
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
+      .a-canvas { width: 100vw !important; height: 100vh !important; }
     </style>
   </head>
   <body>
@@ -18,12 +22,9 @@
         <img id="meninas" src="lasmeninas_transparent.png">
       </a-assets>
 
-      <!-- 9:16比率に合わせたサイズ（例：height: 1.6 → width: 0.9） -->
       <a-entity
-        geometry="primitive: plane; height: 1.6; width: 0.9"
-        material="src: #meninas; transparent: true; alphaTest: 0.05"
-        position="0 0.8 -1.2"
-        rotation="0 0 0">
+        geometry="primitive: plane; height: 1.778; width: 1.0"  material="src: #meninas; transparent: true; alphaTest: 0.05"
+        position="0 -0.4 -2"    rotation="0 0 0">
       </a-entity>
 
       <a-entity camera></a-entity>
