--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Las Meninas AR (最終確定・安定版)</title>
+    <title>Las Meninas AR (収縮防止・最終版)</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1">
     
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.2/aframe/build/aframe-ar.min.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
+      /* ARのクリッピングを防ぎ、画面いっぱいのサイズを強制 */
       .a-canvas { width: 100vw !important; height: 100vh !important; }
     </style>
   </head>
@@ -22,15 +23,17 @@
         <img id="meninas" src="lasmeninas_transparent.png">
       </a-assets>
 
-      <a-entity
-        geometry="primitive: plane; height: 1.778; width: 1.0"  material="src: #meninas; transparent: true; alphaTest: 0.05"
-        position="0 -0.4 -2"    rotation="0 0 0">
+      <a-entity camera>
+        <a-entity
+          geometry="primitive: plane; height: 3.0; width: 1.687"  material="src: #meninas; transparent: true; alphaTest: 0.05"
+          position="0 1.5 -3.0"    rotation="0 0 0">
+        </a-entity>
       </a-entity>
 
-      <a-entity camera></a-entity>
     </a-scene>
   </body>
 </html>
+
 
 
 
